--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,36 +1,35 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
-template: splash
-hero:
-  tagline: Congrats on setting up a new Starlight project!
-  image:
-    file: ../../assets/houston.webp
-  actions:
-    - text: Example Guide
-      link: /guides/example/
-      icon: right-arrow
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
-      variant: minimal
+title: whoami
+tableOfContents: false
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
+# About me
 
-## Next steps
+My name is Maxim Koltypin, I'm 25 years old and work in military intelligence. My passion is cybersecurity, specifically Red Teaming.
+I have 2+ years of experience with Linux, scripting and hacking and have rooted over 120+ CTF's ⛳.
 
-<CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
-</CardGrid>
+## Certifications
+
+- Offensive Security Certified Proffesional [(OSCP)](https://credentials.offsec.com/bf00f5f5-04bb-410e-9694-3a16608eea5c#acc.KPawM84R) & [(OSCP+)](https://credentials.offsec.com/7df2784c-e2f3-4b17-89c6-53453e8f6386#acc.s46AZBj3)
+- Network Penetration Testing Essentials [(PEN-100)](https://credentials.offsec.com/46f643da-caa6-440e-8b03-294b19228e6d#acc.iLmaNPRV)
+- CS50’s Introduction to Programming with Python [(CS50P)](/src/assets/CS50P%20Certificate.png)
+- CS50: Introduction to Computer Science [(CS50X)](/src/assets/CS50x%20Certificate.png)
+
+## Work Experience
+
+**Technical Exploitation Operator - Military Intelligence** <br></br> *Sep 2023 - Present*
+
+**Marine 1st Class - Marine Corps** <br></br> *Aug 2018 - Present*
+
+### Skillset
+- Penetration Testing
+- Report Writing
+- Scripting
+- Enumeration
+- OSINT
+- Networking
+- Soft Skills
+
+## Get in touch with me
+- [LinkedIn](https://www.linkedin.com/in/maxim-koltypin-05aa0028b/)
+- [GitHub](https://github.com/MaxK9999)
