--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,35 +1,18 @@
 ---
-title: whoami
-tableOfContents: false
+title: Welcome to my blog!
+description: cybersec blog
+head:
+  - tag: title
+    content: Starlight Obsidian
+template: splash
+editUrl: false
+lastUpdated: false
+hero:
+  tagline: cyber
+  actions:
+    - text: Take a peek
+      link: /introduction/whoami/
+      icon: right-arrow
 ---
 
-# About me
-
-My name is Maxim Koltypin, I'm 25 years old and work in military intelligence. My passion is cybersecurity, specifically Red Teaming.
-I have 2+ years of experience with Linux, scripting and hacking and have rooted over 120+ CTF's ⛳.
-
-## Certifications
-
-- Offensive Security Certified Proffesional [(OSCP)](https://credentials.offsec.com/bf00f5f5-04bb-410e-9694-3a16608eea5c#acc.KPawM84R) & [(OSCP+)](https://credentials.offsec.com/7df2784c-e2f3-4b17-89c6-53453e8f6386#acc.s46AZBj3)
-- Network Penetration Testing Essentials [(PEN-100)](https://credentials.offsec.com/46f643da-caa6-440e-8b03-294b19228e6d#acc.iLmaNPRV)
-- CS50’s Introduction to Programming with Python [(CS50P)](/src/assets/CS50P%20Certificate.png)
-- CS50: Introduction to Computer Science [(CS50X)](/src/assets/CS50x%20Certificate.png)
-
-## Work Experience
-
-**Technical Exploitation Operator - Military Intelligence** <br></br> *Sep 2023 - Present*
-
-**Marine 1st Class - Marine Corps** <br></br> *Aug 2018 - Present*
-
-### Skillset
-- Penetration Testing
-- Report Writing
-- Scripting
-- Enumeration
-- OSINT
-- Networking
-- Soft Skills
-
-## Get in touch with me
-- [LinkedIn](https://www.linkedin.com/in/maxim-koltypin-05aa0028b/)
-- [GitHub](https://github.com/MaxK9999)
+import { Card, CardGrid } from '@astrojs/starlight/components'
