--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -3,16 +3,15 @@ title: Welcome to my blog!
 description: cybersec blog
 head:
   - tag: title
-    content: Starlight Obsidian
+    content: blog
 template: splash
 editUrl: false
 lastUpdated: false
 hero:
-  tagline: cyber
   actions:
-    - text: Take a peek
+    - text: Take a peek inside!
       link: /introduction/whoami/
       icon: right-arrow
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components'
+TODO
